--- a/app/components/edit-card-data-popup/edit-card-data-popup.scss
+++ b/app/components/edit-card-data-popup/edit-card-data-popup.scss
@@ -34,4 +34,10 @@
     fill: #0c6;
     transform: rotate(180deg);
   }
+
+  &__select-param {
+    color: #797b7c;
+    font-size: 14px;
+    font-weight: 400;
+  }
 }
