--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -4,6 +4,7 @@
   align-items: center;
   padding: 0 28px;
   min-height: 40px;
+  cursor: pointer;
 
   &_uppercase {
     text-transform: uppercase;
