--- a/app/blocks/icon-button/icon-button.scss
+++ b/app/blocks/icon-button/icon-button.scss
@@ -7,6 +7,7 @@
   transition: all .25s ease-in-out;
   padding: 9px;
   min-height: 40px;
+  cursor: pointer;
 
   &_uppercase {
     text-transform: uppercase;
