--- a/app/blocks/icon-menu/icon-menu.scss
+++ b/app/blocks/icon-menu/icon-menu.scss
@@ -17,6 +17,7 @@
     align-items: center;
     width: 100%;
     min-height: 56px;
+    height: 56px;
     padding-left: 10px;
     padding-right: 10px;
 
