--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -2,9 +2,7 @@
   cursor: pointer;
   display: flex;
   align-items: center;
-  padding: 0 28px;
-  min-height: 40px;
-  cursor: pointer;
+  padding: 12px 28px;
 
   &_uppercase {
     text-transform: uppercase;
@@ -19,8 +17,7 @@
   }
 
   &_size_small {
-    min-height: 32px;
-    padding: 0 22px;
+    padding: 8px 22px;
   }
 
   &_green {
