--- a/app/blocks/list/list.scss
+++ b/app/blocks/list/list.scss
@@ -7,7 +7,6 @@
     display: flex;
     align-items: center;
     width: 100%;
-    min-height: 56px;
     padding-left: 20px;
     padding-right: 20px;
     border-top: 1px solid #d2d3d3;
@@ -25,7 +24,7 @@
     align-items: center;
     justify-content: inherit;
     width: 100%;
-    min-height: 56px;
+    padding: 12px 0;
     will-change: color;
     transition: color .25s ease-in-out;
     color: #0353a4;
