--- a/app/blocks/tags/tags.scss
+++ b/app/blocks/tags/tags.scss
@@ -15,6 +15,7 @@
         display: flex;
         margin-bottom: 0;
         cursor: pointer;
+        flex-shrink: 0;
 
         &:last-child {
           margin-right: 0;
@@ -67,6 +68,7 @@
     color: #202325;
     font-size: 12px;
     font-weight: 400;
+    flex-shrink: 0;
 
     &_left_radius {
       border-radius: 3px 0 0 3px;
@@ -81,6 +83,7 @@
     width: 10px;
     height: 10px;
     fill: #000;
+    flex-shrink: 0;
   }
 
   &__close {
