--- a/app/components/search-bar/search-bar.scss
+++ b/app/components/search-bar/search-bar.scss
@@ -64,7 +64,7 @@
         height: 100%;
         display: flex;
         align-items: center;
-        width: 100%;
+        flex: 1;
 
         &::placeholder { color: #d2d3d3; }
       }
