--- a/app/components/edit-card-data-popup/edit-card-data-popup.scss
+++ b/app/components/edit-card-data-popup/edit-card-data-popup.scss
@@ -35,7 +35,12 @@
     transform: rotate(180deg);
   }
 
+  &__select-param, .select {
+    width: 240px;
+  }
+
   &__select-param {
+    display: block;
     color: #797b7c;
     font-size: 14px;
     font-weight: 400;
