--- a/app/pages/settings-devices-device/settings-devices-device.scss
+++ b/app/pages/settings-devices-device/settings-devices-device.scss
@@ -3,8 +3,12 @@
   height: 100%;
 
   &__add {
-    width: 210px;
+    min-width: 210px;
     justify-content: center;
+  }
+
+  &__datepicker {
+    min-width: 316px;
   }
 
   &__container {
