--- a/app/pages/settings-devices-zone/settings-devices-zone.pug
+++ b/app/pages/settings-devices-zone/settings-devices-zone.pug
@@ -31,7 +31,7 @@ block layout-right
       +actions-header-col._flexible
         +search-bar('Номер карты или номер транспортного средства...')._white.__search-bar
       +actions-header-col
-        +datepicker
+        +datepicker.settings-devices-zone__datepicker
 
     +e.container
       +inner-sidebar
