--- a/app/pages/settings-devices-device/settings-devices-device.pug
+++ b/app/pages/settings-devices-device/settings-devices-device.pug
@@ -32,7 +32,7 @@ block layout-right
       +actions-header-col._flexible
         +search-bar('Номер карты или номер транспортного средства...')._white.__search-bar
       +actions-header-col
-        +datepicker
+        +datepicker.settings-devices-device__datepicker
 
     +e.container
       +inner-sidebar
