--- a/app/blocks/colorpicker/colorpicker.pug
+++ b/app/blocks/colorpicker/colorpicker.pug
@@ -1,3 +1,3 @@
 mixin colorpicker(color)
   +b.colorpicker&attributes(attributes)
-    +e.INPUT(type='color', value=color).input
+    +e.INPUT(type='text', value=color).input
