--- a/app/layouts/head.pug
+++ b/app/layouts/head.pug
@@ -10,8 +10,10 @@ head
 
   link(href='favicon.ico' rel='shortcut icon')
   link(href='assets/styles/libs/daterangepicker.min.css' rel='stylesheet')
+  link(href='assets/styles/libs/spectrum.css' rel='stylesheet')
   link(href='assets/styles/app.min.css' rel='stylesheet')
 
   script(src='assets/scripts/libs/jquery-3.2.1.min.js')
   script(src='assets/scripts/libs/moment.min.js')
   script(src='assets/scripts/libs/jquery.daterangepicker.min.js')
+  script(src='assets/scripts/libs/spectrum.js')
