--- a/app/components/login-form/login-form.pug
+++ b/app/components/login-form/login-form.pug
@@ -15,4 +15,4 @@ mixin login-form()
         +field-item
           +input()(type='password')
 
-      +button().BUTTON(type='submit')._orange._uppercase.__submit Войти
+      +button().BUTTON(type='submit')._orange._size_small._uppercase.__submit Войти
