--- a/app/components/search-filter/search-filter.scss
+++ b/app/components/search-filter/search-filter.scss
@@ -4,6 +4,11 @@
   box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
   border-radius: 3px;
 
+  &__sidebar {
+    width: 225px;
+    flex-basis: 225px;
+  }
+
   &__container {
     flex: 1;
     background-color: #fff;
@@ -51,5 +56,12 @@
     &_flexible {
       flex: 1;
     }
+  }
+
+  &__button {
+    min-width: 182px;
+    justify-content: center;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
