--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -60,6 +60,8 @@
   }
 
   &_text_green {
+    padding-left: 16px;
+    padding-right: 16px;
     color: #0c6;
     font-size: 14px;
     font-weight: 500;
@@ -70,6 +72,8 @@
   }
 
   &_text_grey {
+    padding-left: 16px;
+    padding-right: 16px;
     color: #797b7c;
     font-size: 14px;
     font-weight: 500;
@@ -80,6 +84,8 @@
   }
 
   &_text_red {
+    padding-left: 16px;
+    padding-right: 16px;
     color: #ed1c24;
     font-size: 14px;
     font-weight: 500;
