--- a/app/blocks/table/table.scss
+++ b/app/blocks/table/table.scss
@@ -165,7 +165,7 @@
       align-items: flex-start;
     }
 
-    &_flexible { flex: 1; }
+    &_flexible { flex: 1; min-width: 140px; }
 
     &:not(:last-child) { border-right: 1px solid transparent; }
   }
