--- a/app/pages/statistics/statistics.pug
+++ b/app/pages/statistics/statistics.pug
@@ -67,10 +67,10 @@ block layout-right
 
     +e.content
       +actions-header
-        +actions-header-col
+        +actions-header-col.statistic__view
           +select([{title: 'Стандартный вид', value: 1}, {title: 'Стандартный вид 1', value: 2}])
         +actions-header-col._flexible
-          +datepicker()
+          +datepicker
         +actions-header-col
           +icon-button('icon-export')(href='#')._uppercase Экспорт
         +actions-header-col
