--- a/app/pages/statistics/statistics.scss
+++ b/app/pages/statistics/statistics.scss
@@ -3,6 +3,11 @@
   width: 100%;
   min-height: 100%;
 
+  &__view {
+    min-width: 232px;
+    max-width: 400px;
+  }
+
   &__vertical-menu .vertical-menu__text {
     padding-left: 8px;
   }
