--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -57,7 +57,7 @@ block layout-right
 
       +table-row
         +table-row._main
-          +table-col._flexible
+          +table-col._flexible._nowrap
             +checkbox('row', 'value').__checkbox
             +table-text
               a(href="#")
@@ -81,7 +81,7 @@ block layout-right
             +table-text Перезвонить 28.04.2017
       +table-row
         +table-row._main
-          +table-col._flexible
+          +table-col._flexible._nowrap
             +checkbox('row', 'value').__checkbox
             +table-text
               a(href="#")
@@ -104,7 +104,7 @@ block layout-right
           +table-col._width_260
       +table-row
         +table-row._main
-          +table-col._flexible
+          +table-col._flexible._nowrap
             +checkbox('row', 'value').__checkbox
             +table-text
               a(href="#")
@@ -127,7 +127,7 @@ block layout-right
           +table-col._width_260
       +table-row
         +table-row._main
-          +table-col._flexible
+          +table-col._flexible._nowrap
             +checkbox('row', 'value').__checkbox
             +table-text
               a(href="#")
@@ -150,7 +150,7 @@ block layout-right
           +table-col._width_260
       +table-row
         +table-row._main
-          +table-col._flexible
+          +table-col._flexible._nowrap
             +checkbox('row', 'value').__checkbox
             +table-text-block
               +table-text
@@ -175,7 +175,7 @@ block layout-right
           +table-col._width_260
       +table-row._parent
         +table-row._main
-          +table-col._flexible
+          +table-col._flexible._nowrap
             +checkbox('row', 'value').__checkbox
             +table-text
               a(href="#")
@@ -200,7 +200,7 @@ block layout-right
         +table-row._children
           +table-row._parent
             +table-row._main
-              +table-col._flexible
+              +table-col._flexible._nowrap
                 +icon('icon-person').icon._person
                 +checkbox('row', 'value').__checkbox
                 +table-text
@@ -225,7 +225,7 @@ block layout-right
               +table-col._width_260
             +table-row._children
               +table-row._main._left_padding
-                +table-col._flexible
+                +table-col._flexible._nowrap
                   +icon('icon-card').icon._card
                   +checkbox('row', 'value').__checkbox
                   +table-text
@@ -238,7 +238,7 @@ block layout-right
                 +table-col._width_200
                 +table-col._width_260
               +table-row._main._left_padding
-                +table-col._flexible
+                +table-col._flexible._nowrap
                   +icon('icon-card').icon._card
                   +checkbox('row', 'value').__checkbox
                   +table-text
@@ -252,7 +252,7 @@ block layout-right
                 +table-col._width_260
           +table-row._parent
             +table-row._main
-              +table-col._flexible
+              +table-col._flexible._nowrap
                 +icon('icon-person').icon._person
                 +checkbox('row', 'value').__checkbox
                 +table-text
@@ -277,7 +277,7 @@ block layout-right
               +table-col._width_260
             +table-row._children
               +table-row._main._left_padding
-                +table-col._flexible
+                +table-col._flexible._nowrap
                   +icon('icon-card').icon._card
                   +checkbox('row', 'value').__checkbox
                   +table-text
@@ -290,7 +290,7 @@ block layout-right
                 +table-col._width_200
                 +table-col._width_260
               +table-row._main._left_padding
-                +table-col._flexible
+                +table-col._flexible._nowrap
                   +icon('icon-card').icon._card
                   +checkbox('row', 'value').__checkbox
                   +table-text
@@ -304,7 +304,7 @@ block layout-right
                 +table-col._width_260
           +table-row._parent
             +table-row._main._left_padding
-              +table-col._flexible
+              +table-col._flexible._nowrap
                 +checkbox('row', 'value').__checkbox
                 +table-text
                   a(href="#")
@@ -328,7 +328,7 @@ block layout-right
               +table-col._width_260
             +table-row._children
               +table-row._main._left_padding
-                +table-col._flexible
+                +table-col._flexible._nowrap
                   +icon('icon-card').icon._card
                   +checkbox('row', 'value').__checkbox
                   +table-text
@@ -341,7 +341,7 @@ block layout-right
                 +table-col._width_200
                 +table-col._width_260
               +table-row._main._left_padding
-                +table-col._flexible
+                +table-col._flexible._nowrap
                   +icon('icon-card').icon._card
                   +checkbox('row', 'value').__checkbox
                   +table-text
@@ -355,7 +355,7 @@ block layout-right
                 +table-col._width_260
       +table-row
         +table-row._main
-          +table-col._flexible
+          +table-col._flexible._nowrap
             +checkbox('row', 'value').__checkbox
             +table-text
               a(href="#")
@@ -378,7 +378,7 @@ block layout-right
           +table-col._width_260
       +table-row
         +table-row._main
-          +table-col._flexible
+          +table-col._flexible._nowrap
             +checkbox('row', 'value').__checkbox
             +table-text-block
               +table-text
@@ -404,7 +404,7 @@ block layout-right
           +table-col._width_260
       +table-row
         +table-row._main
-          +table-col._flexible
+          +table-col._flexible._nowrap
             +checkbox('row', 'value').__checkbox
             +table-text
               a(href="#")
@@ -427,7 +427,7 @@ block layout-right
           +table-col._width_260
       +table-row
         +table-row._main
-          +table-col._flexible
+          +table-col._flexible._nowrap
             +checkbox('row', 'value').__checkbox
             +table-text
               a(href="#")
@@ -451,7 +451,7 @@ block layout-right
             +table-text Очень много неоплачено
       +table-row
         +table-row._main
-          +table-col._flexible
+          +table-col._flexible._nowrap
             +checkbox('row', 'value').__checkbox
             +table-text
               a(href="#")
@@ -474,7 +474,7 @@ block layout-right
           +table-col._width_260
       +table-row
         +table-row._main
-          +table-col._flexible
+          +table-col._flexible._nowrap
             +checkbox('row', 'value').__checkbox
             +table-text
               a(href="#")
@@ -497,7 +497,7 @@ block layout-right
           +table-col._width_260
       +table-row
         +table-row._main
-          +table-col._flexible
+          +table-col._flexible._nowrap
             +checkbox('row', 'value').__checkbox
             +table-text
               a(href="#")
@@ -520,7 +520,7 @@ block layout-right
           +table-col._width_260
       +table-row
         +table-row._main
-          +table-col._flexible
+          +table-col._flexible._nowrap
             +checkbox('row', 'value').__checkbox
             +table-text
               a(href="#")
@@ -544,7 +544,7 @@ block layout-right
             +table-text Перезвонить 28.04.2017
       +table-row
         +table-row._main
-          +table-col._flexible
+          +table-col._flexible._nowrap
             +checkbox('row', 'value').__checkbox
             +table-text
               a(href="#")
@@ -567,7 +567,7 @@ block layout-right
           +table-col._width_260
       +table-row
         +table-row._main
-          +table-col._flexible
+          +table-col._flexible._nowrap
             +checkbox('row', 'value').__checkbox
             +table-text
               a(href="#")
@@ -590,7 +590,7 @@ block layout-right
           +table-col._width_260
       +table-row
         +table-row._main
-          +table-col._flexible
+          +table-col._flexible._nowrap
             +checkbox('row', 'value').__checkbox
             +table-text
               a(href="#")
@@ -613,7 +613,7 @@ block layout-right
           +table-col._width_260
       +table-row
         +table-row._main
-          +table-col._flexible
+          +table-col._flexible._nowrap
             +checkbox('row', 'value').__checkbox
             +table-text-block
               +table-text
@@ -639,7 +639,7 @@ block layout-right
             +table-text
       +table-row
         +table-row._main
-          +table-col._flexible
+          +table-col._flexible._nowrap
             +checkbox('row', 'value').__checkbox
             +table-text
               a(href="#")
@@ -662,7 +662,7 @@ block layout-right
           +table-col._width_260
       +table-row
         +table-row._main
-          +table-col._flexible
+          +table-col._flexible._nowrap
             +checkbox('row', 'value').__checkbox
             +table-text
               a(href="#")
@@ -685,7 +685,7 @@ block layout-right
           +table-col._width_260
       +table-row
         +table-row._main
-          +table-col._flexible
+          +table-col._flexible._nowrap
             +checkbox('row', 'value').__checkbox
             +table-text-block
               +table-text
@@ -711,7 +711,7 @@ block layout-right
           +table-col._width_260
       +table-row
         +table-row._main
-          +table-col._flexible
+          +table-col._flexible._nowrap
             +checkbox('row', 'value').__checkbox
             +table-text
               a(href="#")
@@ -734,7 +734,7 @@ block layout-right
           +table-col._width_260
       +table-row
         +table-row._main
-          +table-col._flexible
+          +table-col._flexible._nowrap
             +checkbox('row', 'value').__checkbox
             +table-text
               a(href="#")
@@ -758,7 +758,7 @@ block layout-right
             +table-text Очень много неоплачено
       +table-row
         +table-row._main
-          +table-col._flexible
+          +table-col._flexible._nowrap
             +checkbox('row', 'value').__checkbox
             +table-text
               a(href="#")
@@ -781,7 +781,7 @@ block layout-right
           +table-col._width_260
       +table-row
         +table-row._main
-          +table-col._flexible
+          +table-col._flexible._nowrap
             +checkbox('row', 'value').__checkbox
             +table-text
               a(href="#")
@@ -804,7 +804,7 @@ block layout-right
           +table-col._width_260
       +table-row
         +table-row._main
-          +table-col._flexible
+          +table-col._flexible._nowrap
             +checkbox('row', 'value').__checkbox
             +table-text
               a(href="#")
